--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -19,8 +19,8 @@
      <div class = "text-center mb-4">
          <h2>Your Cart</h2>
      </div>
-     <div class = "row" >
-        <div class = "col-lg-7 col-12">
+     <div class = "row pt-4" >
+        <div class = "col-lg-8 col-12">
              <div>
                 <div class="cart-item">
                   <table>
@@ -28,17 +28,18 @@
                           <tr *ngFor="let cart of cart.cartitem">
                               <!-- <td><img src = "assets/img/product/product.png"></td> -->
                               <!-- <div class="" *ngIf="cart.length != 0"> -->
-                              <td><img src = "{{cart.image}}"></td>
-                              <td><h5 class = "mb-0">{{cart.product_detail.title}}</h5>
+                              <td><div class = "cart_product_img"><img src = "{{cart.image}}"></div></td>
+                              <td><h6 class = "mb-0">{{cart.product_detail.title}}</h6>
                                    <p  class = "mb-0"><span>Fawn + Natural </span> / <span>3' x 5'</span> / <span>Tassels</span></p>
-                                   <div class = "product-quantity">
-                                    <!-- <button type = "button" class = "minus" (click) = minus()>-</button> -->
-                                    Qty:<input type = "text" [value] ="cart.stock">
-                                    <!-- <button type = "button" (click) = plus()>+</button> -->
-                                  </div>
+                                   
                             </td>
-                            <td class = "text-center"><h4>${{cart.price}}</h4></td>
-                            <td  class = "text-end"><button type="button" (click)="deleteCartItem(cart.id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
+                            <td class = "text-center"><div class = "product-quantity">
+                              <button type = "button" class = "minus" (click) = minus()>-</button>
+                              <input type = "text" [value] ="cart.stock">
+                             <button type = "button" (click) = plus()>+</button> 
+                            </div></td>
+                            <td class = "text-center"><h5>${{cart.price}}</h5></td>
+                            <td  class = "text-end"><button type="button" (click)="deleteCartItem(cart.id)">&#10005;</button></td>
                             <!-- </div> -->
                           </tr>
                       </tbody>
@@ -46,8 +47,11 @@
                 </div>
              </div>
         </div>
-        <div class = "col-lg-5 col-12">
+        <div class = "col-lg-4 col-12">
             <div class = "cart-checkout" *ngIf="cart.length != 0">
+              <div class = "mb-3">
+                <h5 class = "mb-4">Order Summary</h5>
+              </div>
                 <ul>
                     <hr>
                 <li class = "d-flex justify-content-between py-2">
@@ -61,11 +65,12 @@
                 </li>
                 <hr>
                 <li class = "d-flex justify-content-between py-2">
-                    <h5 class = "mb-0">Total</h5>
+                    <p class = "mb-0">Total</p>
                     <h5 class = "mb-0"><span>${{cart.Totalamount+10}}</span></h5>
                 </li>
                 <hr>
                 </ul>
+                
                 <div>
                     <button type = "button" class = "btn cart-btn green-btn" routerLink="/checkout">Continue to Checkout</button>
                 </div>
