--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -162,10 +162,10 @@
                             </div>
                             <div class="form-group py-3">
                               <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                              <textarea class="form-control" id="exampleFormControlTextarea1" name = "textarea" placeholder = "Lorem Ipsum is simply dummy text of the printing and typesetting industry." rows="3" ></textarea>
+                              <textarea class="form-control" id="exampleFormControlTextarea1" name = "textarea" placeholder = "Type your message here!" rows="3" ></textarea>
                             </div>
                             <div class = "text-center pt-4">
-                              <button type = "submit" class  = "btn blue-btn mt-4" id="button-addon2">Submit</button>
+                              <button type = "submit" class  = "btn blue-btn mt-4" id="button-addon2">Send a Massage</button>
                             </div>
                             </form>
                         
