--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,11 +23,14 @@
                 <a href = "#" class = "nav-link">Visit Us</a>
                 </li>
                 <li class = "nav-item">
-                <a href = "#" class = "nav-link">Our Process</a>
+                <a routerLink = "/products" class = "nav-link">Our Products</a>
                 </li>
                 <li class = "nav-item">
                 <a href = "#" class = "nav-link">Our Story</a>
                 </li>
+                <li class = "nav-item">
+                  <a routerLink = "contact" class = "nav-link">Contact Us</a>
+                  </li>
             </ul>
           </div>
         </div>
@@ -47,6 +50,9 @@
                 <li class = "nav-item">
                 <a href = "#" class = "nav-link">Terms & Conditions</a>
                 </li>
+                <li class = "nav-item">
+                  <a routerLink = "/faqs" class = "nav-link">FAQs</a>
+                  </li>
                 <li class = "nav-item">
                 <a href = "#" class = "nav-link">Privacy & Cookie policy</a>
                 </li> 
