--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,7 @@
   </div>
 </section>
 <!-----------Banner Section Ends---------->
+<hr class = "section_hr">
 <!-----------Section1 Start---------->
 <section id = "section1">
   <div class = "container">
@@ -30,19 +31,16 @@
     </div>
   </div>
 </section>
+<hr class = "section_hr">
 <!-----------Section1 Start---------->
 <section id = "section2">
   <div>
-
-
-
     <iframe width="100%" height="700px" src="https://www.youtube.com/embed/2xp-XC5yylA?autoplay=1&mute=1&rel=0
     ">
     </iframe>
-
   </div>
-
 </section>
+<hr class = "section_hr">
 <!-----------Section 3 starts--------->
 <section id = "section3">
   <div class = "container">
@@ -53,6 +51,7 @@
     </div>
   </div>
 </section>
+<hr class = "section_hr">
 <!-----------Section 3 Ends--------->
 <!-----------Section 4 starts--------->
 <section id = "section4">
@@ -74,6 +73,7 @@
   </div>
 </section>
 <!-----------Section 4 Ends--------->
+<hr class = "section_hr">
 <!-----------Section 5 starts--------->
 <section id = "section5">
   <div class="container">
@@ -88,7 +88,7 @@
             <img class="content-image" src="assets/img/sec5-img1.jpg">
             <div class="content-details fadeIn-bottom">
               <h3 class="content-title">Modern Area Rugs</h3>
-              <button type = "button" class = "btn">View Products</button>
+              <a type = "button" class = "btn" routerLink = "/products">View Products</a>
             </div>
           </a>
         </div>
@@ -100,7 +100,7 @@
             <img class="content-image" src="assets/img/sec5-img2.jpg">
             <div class="content-details fadeIn-bottom">
               <h3 class="content-title">Shag Area Rugs</h3>
-              <button type = "button" class = "btn">View Products</button>
+              <a type = "button" class = "btn" routerLink = "/products">View Products</a>
             </div>
           </a>
         </div>
@@ -112,7 +112,7 @@
             <img class="content-image " src="assets/img/sec5-img3.jpg">
             <div class="content-details fadeIn-bottom">
               <h3 class="content-title">Traditional Area Rugs</h3>
-              <button type = "button" class = "btn">View Products</button>
+              <a type = "button" class = "btn" routerLink = "/products">View Products</a>
             </div>
           </a>
         </div>
@@ -124,15 +124,17 @@
             <img class="content-image" src="assets/img/sec5-img4.jpg">
             <div class="content-details fadeIn-bottom">
               <h3 class="content-title">Outdoor Area Rugs</h3>
-              <button type = "button" class = "btn">View Products</button>
+              <a type = "button" class = "btn" routerLink = "/products">View Products</a>
             </div>
           </a>
         </div>
       </div>
     </div>
   </div>
+
 </section>
 <!-----------Section 5 Ends--------->
+<hr class = "section_hr">
 <!-----------Section 6 Starts--------->
 <section id = "section6">
   <div class = "container">
@@ -163,6 +165,7 @@
   </div>
 </section>
 <!-----------Section 6 Ends--------->
+<hr class = "section_hr">
 <!-----------Section 7 Starts--------->
 <section id = "section7">
   <div class = "container">
@@ -179,9 +182,11 @@
           <div class = "col-lg-6 col-md-6 col-12">
             <a href  = "#">
               <div class="card">
+                <hr class = "section_hr">
                 <div class = "card_img">
                   <img src="assets/img/collection1.jpg" class="card-img-top" alt="...">
                 </div>
+                <hr class = "section_hr">
                 <div class="card-body text-center">
                   <h5 class="card-title mb-0">$80.00
                   </h5>
@@ -192,9 +197,11 @@
           <div class = "col-lg-6 col-md-6 col-12">
             <a href  = "#">
               <div class="card">
+                <hr class = "section_hr">
                 <div class = "card_img">
                   <img src="assets/img/collection2.jpg" class="card-img-top" alt="...">
                 </div>
+                <hr class = "section_hr">
                 <div class="card-body text-center">
                   <h5 class="card-title mb-0">$90.00
                   </h5>
@@ -205,9 +212,11 @@
           <div class = "col-lg-6 col-md-6 col-12 pt-4">
             <a href  = "#">
               <div class="card">
+                <hr class = "section_hr">
                 <div class = "card_img">
                   <img src="assets/img/collection3.jpg" class="card-img-top" alt="...">
                 </div>
+                <hr class = "section_hr">
                 <div class="card-body text-center">
                   <h5 class="card-title mb-0">$70.00
                   </h5>
@@ -218,9 +227,11 @@
           <div class = "col-lg-6 col-md-6 col-12 pt-4">
             <a href  = "#">
               <div class="card">
+                <hr class = "section_hr">
                 <div class = "card_img">
                   <img src="assets/img/collection4.jpg" class="card-img-top" alt="...">
                 </div>
+                <hr class = "section_hr">
                 <div class="card-body text-center">
                   <h5 class="card-title mb-0">$85.00
                   </h5>
@@ -234,6 +245,7 @@
   </div>
 </section>
 <!-----------Section 7 Ends--------->
+<hr class = "section_hr">
 <!-----------Section 8 Starts--------->
 <section id = "section8">
   <div class = "container">
@@ -284,3 +296,4 @@
     </ngx-slick-carousel>
   </div>
 </section>
+<hr class = "section_hr">
