--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -80,7 +80,7 @@
           <!-- <h6>Available in 100 colorways</h6> -->
 
             <div class = "pt-2">
-              <h4>Description</h4>
+              <h6 class = "mb-0">Description</h6>
               <p [innerHTML]="product.description"></p>
             </div>
             <div class = "d-flex justify-content-between py-2">
@@ -173,6 +173,7 @@
   </div>
 </section>
 <!----------Product Details Section Ends---------->
+<hr class = "section_hr">
 <!----------Product slider Section Starts---------->
 <section id = "product-detail-slider">
   <div class = "container">
@@ -189,8 +190,8 @@
             <img src="assets/img/product/product-slide1-1.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -202,8 +203,8 @@
             <img src="assets/img/product/product-slide1-2.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -215,8 +216,8 @@
             <img src="assets/img/product/product-slide2-1.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -228,8 +229,8 @@
             <img   src="assets/img/product/product-slide2-2.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -241,8 +242,8 @@
             <img   src="assets/img/product/product-slide3-1.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -254,8 +255,8 @@
             <img   src="assets/img/product/product-slide3-2.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -267,8 +268,8 @@
             <img src="assets/img/product/product-slide4-1.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -280,8 +281,8 @@
             <img  src="assets/img/product/product-slide4-2.png"/>
           </div>
           <div>
-            <h5>Resolute Runner</h5>
-            <p>$954 — $2547 </p>
+            <h6>Resolute Runner</h6>
+            <h5>$954 — $2547 </h5>
           </div>
         </div>
       </a>
@@ -290,13 +291,15 @@
   </div>
 </section>
 <!----------Product slider Section Ends---------->
+<hr class = "section_hr">
 <!----------Product Swatch Section Ends---------->
 <section id = "product_swatch">
   <div class = "container">
     <div class = "row">
 
       <div class = "col-lg-7 col-12">
-        <div>
+        <div class = "slider_sec">
+      
           <ngx-slick-carousel class="carousel"
     #slickModal="slick-carousel"
     [config]="slideConfigSwatch">
@@ -353,7 +356,7 @@
   </div>
 </section>
 <!----------Product Swatch Section Ends---------->
-
+<hr class = "section_hr">
 <!----------Product Our process  CSS Starts---------->
 <section id = "product_our_process">
   <div class = "container">
@@ -368,7 +371,7 @@
   </div>
 </section>
 <!-----------Product Our process  CSS  Ends---------->
-
+<hr class = "section_hr">
 <!----------Product Contact CSS  Starts---------->
 
 
